Resolve 13 code review findings across dataset access and diagnostic disclosure
Addresses every finding from the B1 BACKEND<->DATABASE review: 1 critical,
4 major, 7 medium and 1 low. All resolved; mvn clean verify is green.

BD-01 (critical) Six access classes each decided independently how a record
  image crosses JDBC - getString, getBytes with a text fallback, or setBytes.
  Introduces common/RecordImageForm as the single authority for every read,
  write and comparison operand, bound from a required, defaultless
  carddemo.record-image.form property and published by DataSourceConfig.
BD-02 (major) AccountRepository ReadResult/WriteResult exposed a derived CICS
  RESP and no RESP2. Adds common/CicsResponse and FileStatus.NO_REASON_CODE so
  both are carried explicitly, per COACTUPC RESP/RESP2 capture.
BD-03 (major) A keyed UPDATE ... LIKE ? ran before its affected-row count was
  checked, so multi-row damage returned normally and the unit of work committed
  it. Account and card rewrites now preclude fan-out under the same lock before
  the DML and raise DatasetIntegrityException rather than report a file status.
BD-04 (medium) A short account row was right-padded to 300 bytes. Now rejected.
BD-05 (medium) A short DATEPARM row was padded to 80 before the 80-into-21 move,
  yielding a different reporting range. Now rejected at both read and decode.
BD-06 (major) The cross-reference browse fetched the whole dataset on OPEN,
  walked memory on READ and always reported success on CLOSE. Split into an OPEN
  probe, lazy per-read retrieval and a real close result, per CBACT03C.
BD-07 (medium) A record byte width and a JDBC affected-row count were reported
  as CICS RESP2. Adds common/DatasetObservation; the abuse is now unspellable.
BD-08 (low) The card browse advanced from a re-encoded value object, so a row
  with non-space reserved bytes could repeat. It now advances from the exact
  stored image.
SEC-01 (major) Sanitized diagnostics were built and then the raw dri